# VoxFlow

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  rust-check.yml
scripts/: release.js
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  voxflow.db
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  character.rs  llm.rs  mod.rs  settings.rs  tts.rs
src-tauri/src/commands/audio/: export.rs  ffmpeg.rs  import.rs  mod.rs  player.rs  utils.rs
src-tauri/src/commands/llm/: commands.rs  generation.rs  kb.rs  mod.rs  outline.rs  parser.rs  pipeline.rs  utils.rs
src-tauri/src/commands/tts/: commands.rs  core.rs  http.rs  mod.rs  models.rs  utils.rs  voice_clone.rs  websocket.rs
src-tauri/src/core/: db.rs  error.rs  event_emitter.rs  mod.rs  models.rs
src-tauri/src/core/agent/: llm_stream.rs  mod.rs
src-tauri/src/core/agent/tools/: character_extraction.rs  mod.rs  outline_analysis.rs  script_generation.rs  story_memory.rs  story_recall.rs
src-tauri/src/core/vector_store/: mod.rs
src/components/character/: CharacterPanel.tsx
src/components/editor/: AudioPlayer.tsx  ExportPanel.tsx  ScriptEditor.tsx  ScriptLine.tsx  ScriptLines.tsx  SectionGroup.tsx  ToolCallList.tsx
src/components/layout/: AppHeader.tsx  ProjectListPage.tsx  ThemeSelector.tsx  ToastContainer.tsx
src/i18n/: en.json  zh.json
src/lib/: ipc.ts
src/store/: projectStore.ts  scriptStore.ts  settingsStore.ts  themeStore.ts
(+4 files in other folders)
