[package]
name = "vox-flow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vox-flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vox_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voxflow"
path = "src/bin/voxflow/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
base64 = "0.22"
log = "0.4.29"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
http = "1"
env_logger = "0.11.10"
rodio = "0.19"
cpal = "0.15"
rig-core = "0.17"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

